2_lab/exercises/9_Monitoring/service_jupyter_monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  # Service to expose metric port from Spark Operator
  name: jupyter-performance-service-driver
  labels:
    app: jupyter-driver
  namespace: frontend
spec:
  ports:
    - name: metrics
      port: 4040
      targetPort: 4040
      protocol: TCP
  selector:
    sparkRole: driver
    app.kubernetes.io/instance: jupyter
