2_lab/exercises/9_Monitoring/ingress_jupyter_ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /jupyter
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: spark-ui-performance-job
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: spark-ui-performance-job.trainer.lab.bigdata.workshop.thinkport.cloud
      http:
        paths:
          - backend:
              service:
                name: jupyter-spark-ui
                port:
                  number: 4040
            path: /
            pathType: Prefix
